<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_orange_dark"
            app:title="PotLuck"
            app:titleTextColor="@color/white"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_all_potlucks"
                android:layout_width="371dp"
                android:layout_height="wrap_content"
                android:text="All Joined Potlucks"
                android:textColor="@color/light_gray"
                android:textStyle="bold"
                app:backgroundTint="@color/primary_variant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.922"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/primary_variant" />


            <!-- Section: Create New Potluck -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_potluck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="Create New PotLuck"
                android:textColor="@color/white" />

            <!-- Join Existing PotLuck Card -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Discover Existing PotLuck"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="Search and join your friends' potlucks"
                        android:textColor="@color/gray" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="Search for PotLucks"
                        app:boxStrokeColor="@android:color/holo_orange_dark"
                        app:hintTextColor="@android:color/holo_orange_dark"
                        app:startIconDrawable="@drawable/ic_search">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/search_potlucks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_join_potluck"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="Join Selected PotLuck"
                        android:textColor="@android:color/holo_orange_dark"
                        app:strokeColor="@android:color/holo_orange_dark" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Potluck List -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/potlucks_recycler"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/recycler_background"
                android:clipToPadding="false"
                android:padding="8dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/tv_no_potlucks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No Potluck Matched"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:gravity="center"
                android:visibility="gone"
                android:padding="16dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Back Button -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:text="Back"
        android:textColor="@color/white"
        app:icon="@drawable/ic_back"
        app:iconTint="@color/white"
        android:backgroundTint="@android:color/holo_orange_dark"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>